--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html {
+    height: 100%;
 }
+body {
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background: linear-gradient(45deg, #136383 0%,#1a9aba 50%,#158bab 51%,#40c7e6 100%);    
+}
+
