--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
 html {
-    height: 100%;
-}
-body {
-    height: 100%;
-    margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background: linear-gradient(45deg, #136383 0%,#1a9aba 50%,#158bab 51%,#40c7e6 100%);    
+	box-sizing: border-box;
 }
 
+* {
+	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	min-height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background: linear-gradient(
+		45deg,
+		#136383 0%,
+		#1a9aba 50%,
+		#158bab 51%,
+		#40c7e6 100%
+	);
+}
